--- a/gvmod/gvmod.csproj
+++ b/gvmod/gvmod.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Assets\Buttons\" />
     <Folder Include="Common\GlobalProjectiles\" />
-    <Folder Include="Common\Players\Septimas\Abilities\" />
   </ItemGroup>
 </Project>
